--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ footer {
         }
     
         .redes a {
-            margin: 5px 0; /* Espacio entre los iconos de las redes sociales en dispositivos móviles */
+            margin: 5px 0; 
         }
     }
     }
@@ -197,19 +197,19 @@ footer {
 .grid-container {
     display: grid;
     grid-template-columns: repeat(1, 2fr);
-    grid-gap: 100px; /* Espacio entre columnas y filas */
+    grid-gap: 100px; 
 }
 
 .grid-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 20px; /* Espacio entre las secciones */
+    gap: 20px; 
     
 }
 
 .sucursales-ubi {
     border: 1px solid #ccc;
-    width: 100%; /* Borde para las secciones */
+    width: 100%; 
     place-content: center;
     justify-content: center;
 }
@@ -219,7 +219,7 @@ footer {
     justify-self: center;
     align-self: center;
     overflow: hidden;
-    margin: 0 auto; /* Para evitar que los iframes sobresalgan */
+    margin: 0 auto; 
 }
 
 iframe {
