--- a/css/style.css
+++ b/css/style.css
@@ -1,386 +1,148 @@
-* {
-    text-decoration: none;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-:root {
-    --color_logo:#355070;
-    --color_primario: #e8d7f1;
-    --color_primario_suave: #bbb891;
-    --altura_header: 80px;
-    --padding_left_right: 2rem;
-    --ancho_maximo: 1200px;
-}
-
-body {
-    background-image: url(../img/background.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    margin: 0; 
-    height: 100vh; 
-}
-
-a {
-    text-decoration: none;
-}
-
-ol, ul {
-    list-style: none;
-}
-
 .header {
-    height: var(--altura_header);
-    background-color: var(--color_primario);
+  background-color: #e8d7f1;
 }
 
 .navbar {
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 0 var(--padding_left_right);
-}
-
-.menu_hamburguesa {
-    display: none;
-}
-
-.menu_hamburguesa:checked + .ul_links {
-    height: calc(100vh - var(--altura_header));
-}
-
-.logo {
-    color: var(--color_logo);
-}
-
-.list_icon {
-    color: var(--color_logo);
-cursor: pointer;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 2rem;
 }
 
 .ul_links {
-    width: 100%;
-    background-color: var(--color_primario);
-    position: absolute;
-    top: var(--altura_header);
-    left: 0;
-    height: 0;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 3rem;
-    transition: all 0.3s;
+  width: 100%;
+  background-color: #e8d7f1;
+  position: absolute;
+  top: var(--altura_header);
+  left: 0;
+  height: 0;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+  transition: all 0.3s;
 }
 
 .link {
-    font-size: 3em;
-    color: var(--color_blanco);
-    font-weight: bold;
+  color: #355070;
+  font-size: 20px;
 }
 
-.boton-catalogo {
-    display: inline-block;
-    padding: 10px 20px;
-    color: black;
-    font-size: 1.2rem;
-    text-decoration: none;
-    border: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
+* {
+  text-decoration: none;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.boton-catalogo:hover {
-background-color: #bbb891;
+a {
+  text-decoration: none;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+body {
+  background-image: url(../img/background.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  margin: 0;
+  height: 100vh;
+}
+
+.menu_hamburguesa {
+  display: none;
+}
+
+.logo {
+  position: sticky;
+  color: #355070;
+}
+
+.list_icon {
+  color: #355070;
+  cursor: pointer;
 }
 
 @media (min-width: 768px) {
-    .labe_hamburguesa {
+  .labe_hamburguesa {
     display: none;
-    }
-    .ul_links {
+  }
+  .ul_links {
     position: static;
     width: auto;
     height: auto;
     flex-direction: row;
     gap: 2rem;
-    }
-    .link {
-    font-size: 1.2rem;
-    transition: all 0.3s;
-    padding: 0.2rem 0.7rem;
-    }
-.link:hover {
-    color: #bbb891;
-    }
+  }
 }
-.logo {
+@media (max-width: 768px) {
+  .logo {
     text-align: center;
+    justify-content: center;
+  }
 }
-
 @media (max-width: 800px) {
-    .ul_links {
+  .ul_links {
     gap: 1rem;
-    }
-}
-.carousel-inner {
-    height: 400px;
-    width: 300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-    background-color: #e8d7f1;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    font-size: 10px;
+  }
 }
 @media (min-width: 768px) {
-    footer {
-        padding: 10px; 
-    }
-    
-    footer p {
-        font-size: 14px; 
-    }
-    
-    footer a {
-        font-size: 14px; 
-    }
+  footer {
+    padding: 10px;
+  }
+  footer p {
+    font-size: 14px;
+  }
+  footer a {
+    font-size: 14px;
+  }
 }
-
-.p-container {
-    text-align: center;
-    margin-bottom: 10px;
-}
-
-.redes {
-    display: flex;
-    justify-content: center;
-}
-
-.redes a {
-    margin: 0 10px;
-}
-
 @media only screen and (max-width: 768px) {
-    footer {
+  footer {
     flex-direction: column;
-}
-    footer .redes {
+  }
+  footer .redes {
     flex-direction: column;
-    }
-    footer .redes a {
+  }
+  footer .redes a {
     margin: 5px 0;
-    }
+  }
 }
-.fa-instagram {
-    font-size: 2rem;
-    color: #355070;
-}
-
-.fa-facebook {
-    font-size: 2rem;
-    color: #355070;
-}
-
-.fa-x-twitter {
-    font-size: 2rem;
-    color: #355070;
-}
-
-.c-item {
-    height: 100px;
-}
-
-.c-img {
-    width: 100%; 
-    height: auto; 
-}
-
-
-.h2yp {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-.sucursales-tittle {
-    font-size: 24px;
-    margin-bottom: 10px;
-}
-
-.sucursales-p {
-    font-size: 16px;
-    margin-bottom: 20px;
-}
-
-.grid-container {
+@media (min-width: 768px) {
+  .h2yp {
     display: grid;
-    grid-template-columns: repeat(1, 2fr);
-    grid-gap: 100px;
-}
-
-.grid-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 20px;
-}
-
-.sucursales-ubi {
-    border: 1px solid #ccc;
-    width: 100%;
-    place-content: center;
-    justify-content: center;
-}
-
-.grid-item {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 20px;
-}
-
-iframe {
-    width: 100%;
-    max-width: 400px;
-    height: auto;
+  }
 }
 @media (min-width: 768px) {
-    .h2yp {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-        gap: 20px;
-    }
+  .form-sect {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 50px;
+  }
 }
-
-.sucurnum {
-    font-size: 20px;
-    margin-bottom: 10px;
-}
-.form-sect{
-    width: 100%;
-    max-width: 90%;
-    margin: auto;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 20px;
-    margin-top: 50px;
-}
-
-.form-sect h3{
-    margin-bottom: 15px;
-    font-size: 25px;
-    color: #355070;
-}
-
-.form-sect p{
-    font-size: 14px;
-    line-height: 1.6;
-    margin-bottom: 20px;
-}
-
-.form-sect a{
-    font-size: 14px;
-    display: block;
-    text-decoration: none;
-    margin-bottom: 15px;
-    color: black;
-}
-
-.form-sect a i{
-    color: orange;
-    margin-right: 10px;
-}
-
-.form-sect form .campo, textarea{
-    width: 100%;
-    padding: 12px;
-    font-size: 14px;
-    border: 1px solid #dbdbdb;
-    margin-bottom: 15px;
-    border-radius: 3px;
-    outline: none;
-}
-
-.form-sect form textarea{
-    min-height: 100px;
-}
-
-.form-sect .btn-enviar{
-    padding: 12px;
-    font-size: 14px;
-    border: none;
-    outline: none;
-    background: orange;
-    color: #fff;
-    border-radius: 3px;
-    cursor: pointer;
-    transition: background 0.3s ease;
-}
-
-@media (min-width: 768px) {
-    .form-sect{
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 50px;
-    }
-
-    .form-sect h3{
-        font-size: 35px;
-    }
-
-    .form-sect p{
-        font-size: 17px;
-        margin-bottom: 30px;
-    }
-
-    .form-sect a{
-        font-size: 17px;
-        margin-bottom: 15px;
-    }
-
-    .form-sect form textarea{
-        min-width: 530px;
-        max-width: 530px;
-        min-height: 140px;
-        max-height: 150px;
-    }
-}
-
-.main-ofertas {
-    display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
-}
-.ofertas-container {
-    text-align: center;
-}
-.buy-button {
-    background-color: #4CAF50; /* Verde */
-    border: none;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin-top: 10px;
-    cursor: pointer;
-} 
 @media screen and (max-width: 768px) {
-    main {
+  main {
     grid-template-columns: 1fr;
-    }
+  }
 }
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  background-color: #e8d7f1;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  font-size: 10px;
+}/*# sourceMappingURL=style.css.map */
