--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,25 @@ body {
     grid-template-columns: 1fr;
   }
 }
+@media (max-width: 800px) {
+  .ul_links {
+    gap: 1rem;
+  }
+}
+@media (min-width: 1100px) {
+  .form {
+    margin-right: 30px;
+  }
+  .container-form form textarea {
+    margin-right: 30px;
+  }
+}
+@media (min-width: 650px) {
+  .form {
+    display: flex;
+    text-align: center;
+  }
+}
 footer {
   display: flex;
   flex-direction: column;
@@ -145,4 +164,81 @@ footer {
   bottom: 0;
   width: 100%;
   font-size: 10px;
+}
+
+.container-form {
+  width: 100%;
+  max-width: 1100px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 50px;
+  margin-top: 90px;
+}
+
+.container-form h3 {
+  margin-bottom: 15px;
+  font-size: 30px;
+}
+
+.container-form p {
+  font-size: 17px;
+  line-height: 1.6;
+  margin-bottom: 30px;
+}
+
+.container-form a {
+  font-size: 15px;
+  display: inline-block;
+  text-decoration: none;
+  width: 100%;
+  margin-bottom: 15px;
+  color: black;
+  font-weight: 700;
+}
+
+.container-form a i {
+  color: orange;
+  margin-right: 10px;
+}
+
+.container-form form .campo, textarea {
+  width: 80%;
+  padding: 15px 10px;
+  font-size: 15px;
+  border: 1px solid #dbdbdb;
+  margin-bottom: 20px;
+  border-radius: 3px;
+  outline: 0px;
+}
+
+.container-form form textarea {
+  max-width: 430px;
+  min-width: 530px;
+  min-width: 140px;
+  max-height: 150px;
+}
+
+.container-form .btn-enviar {
+  padding: 15px;
+  font-size: 16px;
+  border: none;
+  outline: 0px;
+  background: orange;
+  color: white;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: all 300ms ease;
+}
+
+.container-form .btn-enviar :hover {
+  background: #e39403;
+}
+
+.img-contacto {
+  justify-content: center;
+  align-items: center;
+  width: 250px;
+  height: 300px;
+  padding-left: 30px;
 }/*# sourceMappingURL=style.css.map */
