--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -70,3 +70,18 @@
         gap: 1rem;
     }
 }
+@media (min-width: 1100px){
+    .form{
+        margin-right: 30px;
+    }
+    .container-form form textarea{
+        margin-right: 30px;
+    }
+}
+@media(min-width: 650px){
+    .form{
+        display: flex;
+        text-align: center;
+    }
+
+}
