Actualizacion + agregado de archivos scss nuevos

--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -58,15 +58,7 @@
 .container-form .btn-enviar :hover{
     background: #e39403;
 }
-// .ult-tittle{
-//     background-color: white;
-//     opacity: 0.35px;
-//     background-size: cover;
-//     background-repeat: no-repeat;
-//     background-position: center;
-//     position: absolute;
-//     text-align: center;
-// }
+
 .img-contacto{
     justify-content: center;
     align-items: center;
@@ -74,4 +66,7 @@
     height: 300px;
     padding-left: 30px;
     
+}
+.tituloyp{
+    color: white;
 }
