--- a/css/style.css
+++ b/css/style.css
@@ -153,14 +153,22 @@ body {
     text-align: center;
   }
 }
+@media only screen and (min-width: 767px) {
+  .ubi-container {
+    display: grid;
+    grid-template-columns: auto;
+  }
+  .relleno {
+    margin-bottom: 18vh;
+  }
+}
 footer {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 20px;
+  padding: 10px;
   background-color: #e8d7f1;
-  position: fixed;
   bottom: 0;
   width: 100%;
   font-size: 10px;
@@ -241,4 +249,69 @@ footer {
   width: 250px;
   height: 300px;
   padding-left: 30px;
+}
+
+.tituloyp {
+  color: white;
+}
+
+.h2yp {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  background-color: rgb(13, 1, 1);
+  background-size: 0.5fr;
+  opacity: 0.4;
+  justify-content: center;
+  padding-top: 10px;
+}
+
+.somos-smartcity {
+  color: black;
+  font-size: 40px;
+  text-align: center;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.p-smartcity {
+  color: rgb(35, 7, 247);
+  font-size: 23px;
+  text-align: center;
+}
+
+.main-index {
+  padding-top: 10%;
+}
+
+.ubi-container {
+  grid-template-columns: auto auto;
+  gap: 80px;
+}
+
+.iframe {
+  width: 100px;
+  height: 100px;
+}
+
+.sucur-ubi {
+  text-align: center;
+  border: 1px solid black;
+}
+
+.relleno {
+  text-align: center;
+  background-color: rgb(13, 1, 1);
+  opacity: 0.9;
+  background-size: cover;
+  padding-top: 10px;
+}
+
+.sucursal-tittle {
+  color: rgb(222, 66, 66);
+}
+
+.h2yp {
+  align-items: center;
+  color: white;
 }/*# sourceMappingURL=style.css.map */
