--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -93,3 +93,12 @@
         margin-bottom: 18vh;
     }
 }
+@media only screen and (min-width: 970px){
+    .img-catalogo{
+        width: 50px;
+        height: 50px;
+    }
+    .contenido{
+        
+    }
+}
