--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,7 @@ footer {
   justify-content: center;
   padding: 10px;
   background-color: #e8d7f1;
+  position: fixed;
   bottom: 0;
   width: 100%;
   font-size: 10px;
@@ -351,4 +352,22 @@ footer {
 
 .licontainer {
   color: wheat;
+}
+
+.boton-catalogo {
+  background-color: white;
+  color: black;
+  border-radius: 10em;
+  font-size: 17px;
+  font-weight: 600;
+  padding: 1em 2em;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  border: 1px solid black;
+  box-shadow: 0 0 0 0 black;
+}
+
+.boton-catalogo :hover {
+  transform: translateY(-4px) translateX(-2px);
+  box-shadow: 2px 5px 0 0 black;
 }/*# sourceMappingURL=style.css.map */
