--- a/scss/_catalogo.scss
+++ b/scss/_catalogo.scss
@@ -23,3 +23,19 @@
 .licontainer{
     color: wheat;
 }
+.boton-catalogo{
+    background-color: white;
+    color: black;
+    border-radius: 10em;
+    font-size: 17px;
+    font-weight: 600;
+    padding: 1em 2em;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    border: 1px solid black;
+    box-shadow: 0 0 0 0 black;
+}
+.boton-catalogo :hover{
+    transform: translateY(-4px) translateX(-2px);
+    box-shadow: 2px 5px 0 0 black;
+};
