--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -5,7 +5,7 @@ footer {
     justify-content: center;
     padding: 10px;
     background-color: #e8d7f1;
-    
+    position: fixed;
     bottom: 0;
     width: 100%;
     font-size: 10px;
